load("@grab_bazel_common//rules:defs.bzl", "android_binary", "android_instrumentation_binary")
load("@tools_android//tools/crashlytics:defs.bzl", "crashlytics_android_library")
load("@tools_android//tools/googleservices:defs.bzl", "google_services_xml")

android_binary(
    name = "sample-android-demo-free-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/**/*.kt",
    ]),
    build_config = {
        "strings": {
            "SOME_STRING": "Something",
            "VERSION_NAME": "1.0",
            "VARIANT_NAME": "demoFreeDebug",
        },
        "booleans": {
            "SOME_BOOLEAN": "false",
        },
        "ints": {
            "SOME_INT": 0,
            "VERSION_CODE": 1,
        },
        "longs": {
            "SOME_LONG": 0,
        },
    },
    crunch_png = False,
    custom_package = "com.grab.grazel.android.sample",
    debug_key = "//keystore:debug-keystore",
    enable_compose = True,
    enable_data_binding = True,
    incremental_dexing = True,
    lint_options = {
        "enabled": True,
        "config": "//:lint.xml",
        "baseline": "lint_baseline.xml",
        "lint_checks": [
            "//lint/custom-lint-rules:custom-lint-rules",
            "@lint_maven//:com_slack_lint_slack_lint_checks",
        ],
    },
    manifest = "src/debug/AndroidManifest.xml",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "21",
        "targetSdkVersion": "31",
        "applicationId": "com.grab.grazel.android.sample.free",
        "orientation": "portrait",
        "libraryManifestHolder": "value",
    },
    multidex = "native",
    res_values = {
        "strings": {
            "generated_value": "This string was generated with resValue",
            "type": "debug",
            "flavor": "free",
        },
    },
    resource_configuration_filters = [
        "en",
        "id",
        "in",
        "ja",
        "km",
        "ko",
        "ms",
        "my",
        "th",
        "vi",
        "zh",
    ],
    resource_sets = {
        "debug": {
            "res": "src/main/res-debug",
            "manifest": "src/debug/AndroidManifest.xml",
        },
        "free": {
            "res": "src/free/res",
        },
        "main": {
            "res": "src/main/res",
            "assets": "src/main/assets",
            "manifest": "src/main/AndroidManifest.xml",
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":crashlytics-demo-free-debug",
        "//:dagger",
        "//:parcelize",
        "//flavors/sample-android-flavor:sample-android-flavor-demo-free-debug",
        "//sample-android-library:sample-android-library-demo-free-debug",
        "//sample-kotlin-library",
        "@debug_maven//:androidx_core_core",
        "@debug_maven//:androidx_lifecycle_lifecycle_common",
        "@debug_maven//:androidx_lifecycle_lifecycle_runtime",
        "@debug_maven//:androidx_lifecycle_lifecycle_viewmodel",
        "@debug_maven//:androidx_paging_paging_runtime",
        "@maven//:androidx_activity_activity",
        "@maven//:androidx_activity_activity_compose",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_foundation_foundation",
        "@maven//:androidx_compose_foundation_foundation_layout",
        "@maven//:androidx_compose_material_material",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_compose_ui_ui_tooling",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_emoji2_emoji2",
        "@maven//:com_google_ar_sceneform_ux_sceneform_ux",
        "@maven//:com_jakewharton_timber_timber",
    ],
)

android_binary(
    name = "sample-android-demo-paid-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/**/*.kt",
    ]),
    build_config = {
        "strings": {
            "SOME_STRING": "Something",
            "VERSION_NAME": "1.0",
            "VARIANT_NAME": "demoPaidDebug",
        },
        "booleans": {
            "SOME_BOOLEAN": "false",
        },
        "ints": {
            "SOME_INT": 0,
            "VERSION_CODE": 1,
        },
        "longs": {
            "SOME_LONG": 0,
        },
    },
    crunch_png = False,
    custom_package = "com.grab.grazel.android.sample",
    debug_key = "//keystore:debug-keystore",
    enable_compose = True,
    enable_data_binding = True,
    incremental_dexing = True,
    lint_options = {
        "enabled": True,
        "config": "//:lint.xml",
        "baseline": "lint_baseline.xml",
        "lint_checks": [
            "//lint/custom-lint-rules:custom-lint-rules",
            "@lint_maven//:com_slack_lint_slack_lint_checks",
        ],
    },
    manifest = "src/debug/AndroidManifest.xml",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "21",
        "targetSdkVersion": "31",
        "applicationId": "com.grab.grazel.android.sample.paid",
        "orientation": "portrait",
        "libraryManifestHolder": "value",
    },
    multidex = "native",
    res_values = {
        "strings": {
            "generated_value": "This string was generated with resValue",
            "type": "debug",
            "flavor": "paid",
        },
    },
    resource_configuration_filters = [
        "en",
        "id",
        "in",
        "ja",
        "km",
        "ko",
        "ms",
        "my",
        "th",
        "vi",
        "zh",
    ],
    resource_sets = {
        "debug": {
            "res": "src/main/res-debug",
            "manifest": "src/debug/AndroidManifest.xml",
        },
        "paid": {
            "res": "src/paid/res",
        },
        "main": {
            "res": "src/main/res",
            "assets": "src/main/assets",
            "manifest": "src/main/AndroidManifest.xml",
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":crashlytics-demo-paid-debug",
        "//:dagger",
        "//:parcelize",
        "//flavors/sample-android-flavor:sample-android-flavor-demo-paid-debug",
        "//sample-android-library:sample-android-library-demo-paid-debug",
        "//sample-kotlin-library",
        "@debug_maven//:androidx_core_core",
        "@debug_maven//:androidx_lifecycle_lifecycle_common",
        "@debug_maven//:androidx_lifecycle_lifecycle_runtime",
        "@debug_maven//:androidx_lifecycle_lifecycle_viewmodel",
        "@debug_maven//:androidx_paging_paging_runtime",
        "@maven//:androidx_activity_activity",
        "@maven//:androidx_activity_activity_compose",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_foundation_foundation",
        "@maven//:androidx_compose_foundation_foundation_layout",
        "@maven//:androidx_compose_material_material",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_compose_ui_ui_tooling",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_emoji2_emoji2",
        "@maven//:com_google_ar_sceneform_ux_sceneform_ux",
        "@maven//:com_jakewharton_timber_timber",
    ],
)

android_binary(
    name = "sample-android-full-free-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/**/*.kt",
    ]),
    build_config = {
        "strings": {
            "SOME_STRING": "Something",
            "VERSION_NAME": "1.0",
            "VARIANT_NAME": "fullFreeDebug",
        },
        "booleans": {
            "SOME_BOOLEAN": "false",
        },
        "ints": {
            "SOME_INT": 0,
            "VERSION_CODE": 1,
        },
        "longs": {
            "SOME_LONG": 0,
        },
    },
    crunch_png = False,
    custom_package = "com.grab.grazel.android.sample",
    debug_key = "//keystore:debug-keystore",
    enable_compose = True,
    enable_data_binding = True,
    incremental_dexing = True,
    lint_options = {
        "enabled": True,
        "config": "//:lint.xml",
        "baseline": "lint_baseline.xml",
        "lint_checks": [
            "//lint/custom-lint-rules:custom-lint-rules",
            "@lint_maven//:com_slack_lint_slack_lint_checks",
        ],
    },
    manifest = "src/debug/AndroidManifest.xml",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "21",
        "targetSdkVersion": "31",
        "applicationId": "com.grab.grazel.android.sample.free",
        "orientation": "portrait",
        "libraryManifestHolder": "value",
    },
    multidex = "native",
    res_values = {
        "strings": {
            "generated_value": "This string was generated with resValue",
            "type": "debug",
            "flavor": "free",
        },
    },
    resource_configuration_filters = [
        "en",
        "id",
        "in",
        "ja",
        "km",
        "ko",
        "ms",
        "my",
        "th",
        "vi",
        "zh",
    ],
    resource_sets = {
        "debug": {
            "res": "src/main/res-debug",
            "manifest": "src/debug/AndroidManifest.xml",
        },
        "free": {
            "res": "src/free/res",
        },
        "main": {
            "res": "src/main/res",
            "assets": "src/main/assets",
            "manifest": "src/main/AndroidManifest.xml",
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":crashlytics-full-free-debug",
        "//:dagger",
        "//:parcelize",
        "//flavors/sample-android-flavor:sample-android-flavor-full-free-debug",
        "//sample-android-library:sample-android-library-full-free-debug",
        "//sample-kotlin-library",
        "@debug_maven//:androidx_core_core",
        "@debug_maven//:androidx_lifecycle_lifecycle_common",
        "@debug_maven//:androidx_lifecycle_lifecycle_runtime",
        "@debug_maven//:androidx_lifecycle_lifecycle_viewmodel",
        "@debug_maven//:androidx_paging_paging_runtime",
        "@maven//:androidx_activity_activity",
        "@maven//:androidx_activity_activity_compose",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_foundation_foundation",
        "@maven//:androidx_compose_foundation_foundation_layout",
        "@maven//:androidx_compose_material_material",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_compose_ui_ui_tooling",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_emoji2_emoji2",
        "@maven//:com_google_ar_sceneform_ux_sceneform_ux",
        "@maven//:com_jakewharton_timber_timber",
    ],
)

android_binary(
    name = "sample-android-full-paid-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/sample/**/*.kt",
    ]),
    build_config = {
        "strings": {
            "SOME_STRING": "Something",
            "VERSION_NAME": "1.0",
            "VARIANT_NAME": "fullPaidDebug",
        },
        "booleans": {
            "SOME_BOOLEAN": "false",
        },
        "ints": {
            "SOME_INT": 0,
            "VERSION_CODE": 1,
        },
        "longs": {
            "SOME_LONG": 0,
        },
    },
    crunch_png = False,
    custom_package = "com.grab.grazel.android.sample",
    debug_key = "//keystore:debug-keystore",
    enable_compose = True,
    enable_data_binding = True,
    incremental_dexing = True,
    lint_options = {
        "enabled": True,
        "config": "//:lint.xml",
        "baseline": "lint_baseline.xml",
        "lint_checks": [
            "//lint/custom-lint-rules:custom-lint-rules",
            "@lint_maven//:com_slack_lint_slack_lint_checks",
        ],
    },
    manifest = "src/debug/AndroidManifest.xml",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "21",
        "targetSdkVersion": "31",
        "applicationId": "com.grab.grazel.android.sample.paid",
        "orientation": "portrait",
        "libraryManifestHolder": "value",
    },
    multidex = "native",
    res_values = {
        "strings": {
            "generated_value": "This string was generated with resValue",
            "type": "debug",
            "flavor": "paid",
        },
    },
    resource_configuration_filters = [
        "en",
        "id",
        "in",
        "ja",
        "km",
        "ko",
        "ms",
        "my",
        "th",
        "vi",
        "zh",
    ],
    resource_sets = {
        "debug": {
            "res": "src/main/res-debug",
            "manifest": "src/debug/AndroidManifest.xml",
        },
        "paid": {
            "res": "src/paid/res",
        },
        "main": {
            "res": "src/main/res",
            "assets": "src/main/assets",
            "manifest": "src/main/AndroidManifest.xml",
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        ":crashlytics-full-paid-debug",
        "//:dagger",
        "//:parcelize",
        "//flavors/sample-android-flavor:sample-android-flavor-full-paid-debug",
        "//sample-android-library:sample-android-library-full-paid-debug",
        "//sample-kotlin-library",
        "@debug_maven//:androidx_core_core",
        "@debug_maven//:androidx_lifecycle_lifecycle_common",
        "@debug_maven//:androidx_lifecycle_lifecycle_runtime",
        "@debug_maven//:androidx_lifecycle_lifecycle_viewmodel",
        "@debug_maven//:androidx_paging_paging_runtime",
        "@maven//:androidx_activity_activity",
        "@maven//:androidx_activity_activity_compose",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_foundation_foundation",
        "@maven//:androidx_compose_foundation_foundation_layout",
        "@maven//:androidx_compose_material_material",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_compose_ui_ui_tooling",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_emoji2_emoji2",
        "@maven//:com_google_ar_sceneform_ux_sceneform_ux",
        "@maven//:com_jakewharton_timber_timber",
    ],
)

crashlytics_android_library(
    name = "crashlytics-demo-free-debug",
    package_name = "com.grab.grazel.android.sample.free",
    build_id = "042cb4d8-56f8-41a0-916a-9da28e94d1ba",
    resource_files = google_services_xml(
        package_name = "com.grab.grazel.android.sample.free",
        google_services_json = "src/demoFreeDebug/google-services.json",
    ),
)

crashlytics_android_library(
    name = "crashlytics-demo-paid-debug",
    package_name = "com.grab.grazel.android.sample.paid",
    build_id = "042cb4d8-56f8-41a0-916a-9da28e94d1ba",
    resource_files = google_services_xml(
        package_name = "com.grab.grazel.android.sample.paid",
        google_services_json = "src/demoPaid/google-services.json",
    ),
)

crashlytics_android_library(
    name = "crashlytics-full-free-debug",
    package_name = "com.grab.grazel.android.sample.free",
    build_id = "042cb4d8-56f8-41a0-916a-9da28e94d1ba",
    resource_files = google_services_xml(
        package_name = "com.grab.grazel.android.sample.free",
        google_services_json = "src/fullFree/google-services.json",
    ),
)

crashlytics_android_library(
    name = "crashlytics-full-paid-debug",
    package_name = "com.grab.grazel.android.sample.paid",
    build_id = "042cb4d8-56f8-41a0-916a-9da28e94d1ba",
    resource_files = google_services_xml(
        package_name = "com.grab.grazel.android.sample.paid",
        google_services_json = "src/fullPaid/google-services.json",
    ),
)

android_instrumentation_binary(
    name = "sample-android-demo-free-debug-android-test",
    srcs = glob([
        "src/androidTest/java/JavaTest.java",
        "src/androidTest/java/KotlinTest.kt",
    ]),
    associates = [
        "//sample-android:lib_sample-android-demo-free-debug_kt",
    ],
    custom_package = "com.grab.grazel.android.sample",
    debug_key = "//keystore:debug-keystore",
    enable_compose = True,
    instruments = ":sample-android-demo-free-debug",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "21",
        "targetSdkVersion": "31",
        "applicationId": "com.grab.grazel.android.sample.free.test",
        "orientation": "portrait",
        "libraryManifestHolder": "value",
    },
    resource_strip_prefix = "sample-android/src/androidTest/resources",
    resources = glob([
        "src/androidTest/resources/resource.json",
    ]),
    target_package = "com.grab.grazel.android.sample.free",
    test_instrumentation_runner = "androidx.test.runner.AndroidJUnitRunner",
    deps = [
        "//:dagger",
        "//flavors/sample-android-flavor:sample-android-flavor-demo-free-debug",
        "//sample-android:lib_sample-android-demo-free-debug",
        "//sample-android-library:sample-android-library-demo-free-debug",
        "//sample-kotlin-library",
        "@android_test_maven//:androidx_activity_activity",
        "@android_test_maven//:androidx_activity_activity_compose",
        "@android_test_maven//:androidx_compose_ui_ui",
        "@android_test_maven//:androidx_compose_ui_ui_test_junit4",
        "@android_test_maven//:androidx_core_core",
        "@android_test_maven//:androidx_emoji2_emoji2",
        "@android_test_maven//:androidx_lifecycle_lifecycle_common",
        "@android_test_maven//:androidx_lifecycle_lifecycle_runtime",
        "@android_test_maven//:androidx_lifecycle_lifecycle_viewmodel",
        "@android_test_maven//:androidx_test_espresso_espresso_core",
        "@android_test_maven//:androidx_test_ext_junit",
        "@android_test_maven//:androidx_test_monitor",
        "@debug_maven//:androidx_paging_paging_runtime",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_foundation_foundation",
        "@maven//:androidx_compose_foundation_foundation_layout",
        "@maven//:androidx_compose_material_material",
        "@maven//:androidx_compose_ui_ui_tooling",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:com_google_ar_sceneform_ux_sceneform_ux",
        "@maven//:com_jakewharton_timber_timber",
    ],
)

android_instrumentation_binary(
    name = "sample-android-demo-paid-debug-android-test",
    srcs = glob([
        "src/androidTest/java/JavaTest.java",
        "src/androidTest/java/KotlinTest.kt",
    ]),
    associates = [
        "//sample-android:lib_sample-android-demo-paid-debug_kt",
    ],
    custom_package = "com.grab.grazel.android.sample",
    debug_key = "//keystore:debug-keystore",
    enable_compose = True,
    instruments = ":sample-android-demo-paid-debug",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "21",
        "targetSdkVersion": "31",
        "applicationId": "com.grab.grazel.android.sample.paid.test",
        "orientation": "portrait",
        "libraryManifestHolder": "value",
    },
    resource_strip_prefix = "sample-android/src/androidTest/resources",
    resources = glob([
        "src/androidTest/resources/resource.json",
    ]),
    target_package = "com.grab.grazel.android.sample.paid",
    test_instrumentation_runner = "androidx.test.runner.AndroidJUnitRunner",
    deps = [
        "//:dagger",
        "//flavors/sample-android-flavor:sample-android-flavor-demo-paid-debug",
        "//sample-android:lib_sample-android-demo-paid-debug",
        "//sample-android-library:sample-android-library-demo-paid-debug",
        "//sample-kotlin-library",
        "@android_test_maven//:androidx_activity_activity",
        "@android_test_maven//:androidx_activity_activity_compose",
        "@android_test_maven//:androidx_compose_ui_ui",
        "@android_test_maven//:androidx_compose_ui_ui_test_junit4",
        "@android_test_maven//:androidx_core_core",
        "@android_test_maven//:androidx_emoji2_emoji2",
        "@android_test_maven//:androidx_lifecycle_lifecycle_common",
        "@android_test_maven//:androidx_lifecycle_lifecycle_runtime",
        "@android_test_maven//:androidx_lifecycle_lifecycle_viewmodel",
        "@android_test_maven//:androidx_test_espresso_espresso_core",
        "@android_test_maven//:androidx_test_ext_junit",
        "@android_test_maven//:androidx_test_monitor",
        "@debug_maven//:androidx_paging_paging_runtime",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_foundation_foundation",
        "@maven//:androidx_compose_foundation_foundation_layout",
        "@maven//:androidx_compose_material_material",
        "@maven//:androidx_compose_ui_ui_tooling",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:com_google_ar_sceneform_ux_sceneform_ux",
        "@maven//:com_jakewharton_timber_timber",
    ],
)

android_instrumentation_binary(
    name = "sample-android-full-free-debug-android-test",
    srcs = glob([
        "src/androidTest/java/JavaTest.java",
        "src/androidTest/java/KotlinTest.kt",
    ]),
    associates = [
        "//sample-android:lib_sample-android-full-free-debug_kt",
    ],
    custom_package = "com.grab.grazel.android.sample",
    debug_key = "//keystore:debug-keystore",
    enable_compose = True,
    instruments = ":sample-android-full-free-debug",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "21",
        "targetSdkVersion": "31",
        "applicationId": "com.grab.grazel.android.sample.free.test",
        "orientation": "portrait",
        "libraryManifestHolder": "value",
    },
    resource_strip_prefix = "sample-android/src/androidTest/resources",
    resources = glob([
        "src/androidTest/resources/resource.json",
    ]),
    target_package = "com.grab.grazel.android.sample.free",
    test_instrumentation_runner = "androidx.test.runner.AndroidJUnitRunner",
    deps = [
        "//:dagger",
        "//flavors/sample-android-flavor:sample-android-flavor-full-free-debug",
        "//sample-android:lib_sample-android-full-free-debug",
        "//sample-android-library:sample-android-library-full-free-debug",
        "//sample-kotlin-library",
        "@android_test_maven//:androidx_activity_activity",
        "@android_test_maven//:androidx_activity_activity_compose",
        "@android_test_maven//:androidx_compose_ui_ui",
        "@android_test_maven//:androidx_compose_ui_ui_test_junit4",
        "@android_test_maven//:androidx_core_core",
        "@android_test_maven//:androidx_emoji2_emoji2",
        "@android_test_maven//:androidx_lifecycle_lifecycle_common",
        "@android_test_maven//:androidx_lifecycle_lifecycle_runtime",
        "@android_test_maven//:androidx_lifecycle_lifecycle_viewmodel",
        "@android_test_maven//:androidx_test_espresso_espresso_core",
        "@android_test_maven//:androidx_test_ext_junit",
        "@android_test_maven//:androidx_test_monitor",
        "@debug_maven//:androidx_paging_paging_runtime",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_foundation_foundation",
        "@maven//:androidx_compose_foundation_foundation_layout",
        "@maven//:androidx_compose_material_material",
        "@maven//:androidx_compose_ui_ui_tooling",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:com_google_ar_sceneform_ux_sceneform_ux",
        "@maven//:com_jakewharton_timber_timber",
    ],
)

android_instrumentation_binary(
    name = "sample-android-full-paid-debug-android-test",
    srcs = glob([
        "src/androidTest/java/JavaTest.java",
        "src/androidTest/java/KotlinTest.kt",
    ]),
    associates = [
        "//sample-android:lib_sample-android-full-paid-debug_kt",
    ],
    custom_package = "com.grab.grazel.android.sample",
    debug_key = "//keystore:debug-keystore",
    enable_compose = True,
    instruments = ":sample-android-full-paid-debug",
    manifest_values = {
        "versionCode": "1",
        "versionName": "1.0",
        "minSdkVersion": "21",
        "targetSdkVersion": "31",
        "applicationId": "com.grab.grazel.android.sample.paid.test",
        "orientation": "portrait",
        "libraryManifestHolder": "value",
    },
    resource_strip_prefix = "sample-android/src/androidTest/resources",
    resources = glob([
        "src/androidTest/resources/resource.json",
    ]),
    target_package = "com.grab.grazel.android.sample.paid",
    test_instrumentation_runner = "androidx.test.runner.AndroidJUnitRunner",
    deps = [
        "//:dagger",
        "//flavors/sample-android-flavor:sample-android-flavor-full-paid-debug",
        "//sample-android:lib_sample-android-full-paid-debug",
        "//sample-android-library:sample-android-library-full-paid-debug",
        "//sample-kotlin-library",
        "@android_test_maven//:androidx_activity_activity",
        "@android_test_maven//:androidx_activity_activity_compose",
        "@android_test_maven//:androidx_compose_ui_ui",
        "@android_test_maven//:androidx_compose_ui_ui_test_junit4",
        "@android_test_maven//:androidx_core_core",
        "@android_test_maven//:androidx_emoji2_emoji2",
        "@android_test_maven//:androidx_lifecycle_lifecycle_common",
        "@android_test_maven//:androidx_lifecycle_lifecycle_runtime",
        "@android_test_maven//:androidx_lifecycle_lifecycle_viewmodel",
        "@android_test_maven//:androidx_test_espresso_espresso_core",
        "@android_test_maven//:androidx_test_ext_junit",
        "@android_test_maven//:androidx_test_monitor",
        "@debug_maven//:androidx_paging_paging_runtime",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_foundation_foundation",
        "@maven//:androidx_compose_foundation_foundation_layout",
        "@maven//:androidx_compose_material_material",
        "@maven//:androidx_compose_ui_ui_tooling",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:com_google_ar_sceneform_ux_sceneform_ux",
        "@maven//:com_jakewharton_timber_timber",
    ],
)
