load("@grab_bazel_common//rules:defs.bzl", "kotlin_library", "kotlin_test")

kotlin_library(
    name = "sample-kotlin-library",
    srcs = glob([
        "src/main/java/com/grab/grazel/sample/HelloWorld.kt",
    ]),
    visibility = [
        "//visibility:public",
    ],
)

kotlin_test(
    name = "sample-kotlin-library-test",
    srcs = glob([
        "src/test/java/com/grab/grazel/sample/TestClass1.kt",
    ]),
    associates = [
        "//sample-kotlin-library:sample-kotlin-library",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@test_maven//:junit_junit",
    ],
)
