load("@grab_bazel_common//rules:defs.bzl", "detekt_options", "kotlin_library", "kotlin_test")

kotlin_library(
    name = "sample-kotlin-library",
    srcs = glob([
        "src/main/java/com/grab/grazel/sample/HelloWorld.kt",
    ]),
    detekt_options = detekt_options(
        baseline = "detekt-baseline.xml",
        all_rules = True,
        auto_correct = True,
        build_upon_default_config = True,
        cfgs = ["//:detekt-config.yml"],
        detekt_checks = ["@detekt_maven//:ru_kode_detekt_rules_compose"],
        disable_default_rule_sets = True,
        enabled = True,
        parallel = True,
    ),
    lint_options = {
        "enabled": True,
        "baseline": "lint-baseline-kotlin.xml",
        "lint_checks": ["@lint_maven//:com_slack_lint_slack_lint_checks"],
    },
    visibility = [
        "//visibility:public",
    ],
)

kotlin_test(
    name = "sample-kotlin-library-test",
    srcs = glob([
        "src/test/java/com/grab/grazel/sample/TestClass1.kt",
    ]),
    associates = [
        "//sample-kotlin-library:sample-kotlin-library",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@test_maven//:junit_junit",
    ],
)
