load("@grab_bazel_common//rules:defs.bzl", "kotlin_library", "kotlin_test")

kotlin_library(
    name = "sample-library-flavor1",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/ModuleName.kt",
    ]),
    lint_options = {
        "enabled": "true",
    },
    visibility = [
        "//visibility:public",
    ],
)

kotlin_test(
    name = "sample-library-flavor1-test",
    srcs = glob([
        "src/test/java/com/grab/grazel/flavor1/ModuleNameTest.kt",
    ]),
    associates = [
        "//flavor-libs/sample-library-flavor1:sample-library-flavor1",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@test_maven//:junit_junit",
    ],
)
