load("@grab_bazel_common//rules:defs.bzl", "kotlin_library", "kotlin_test")

kotlin_library(
    name = "sample-library-flavor2",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/ModuleName.kt",
    ]),
    lint_options = {
        "enabled": True,
    },
    visibility = [
        "//visibility:public",
    ],
)

kotlin_test(
    name = "sample-library-flavor2-test",
    srcs = glob([
        "src/test/java/com/grab/grazel/flavor2/ModuleNameTest.kt",
    ]),
    associates = [
        "//flavor-libs/sample-library-flavor2:sample-library-flavor2",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@test_maven//:junit_junit",
    ],
)
