load("@grab_bazel_common//rules:defs.bzl", "android_library")

android_library(
    name = "sample-android-flavor-demo-free-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/**/*.kt",
        "src/demo/java/com/grab/grazel/android/flavor/HelloFlavorMessage.kt",
    ]),
    custom_package = "",
    enable_compose = True,
    enable_data_binding = True,
    lint_options = {
        "enabled": True,
        "config": "//:lint.xml",
    },
    manifest = "src/main/AndroidManifest.xml",
    res_values = {
        "strings": {
            "string/generated_value": "generated",
        },
    },
    resources = {
        "src/demo/res": {
        },
        "src/free/res": {
        },
        "src/main/res": {
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//flavors/sample-library-demo",
        "@debug_maven//:androidx_core_core",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_core",
    ],
)

android_library(
    name = "sample-android-flavor-demo-paid-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/**/*.kt",
        "src/demo/java/com/grab/grazel/android/flavor/HelloFlavorMessage.kt",
    ]),
    custom_package = "",
    enable_compose = True,
    enable_data_binding = True,
    lint_options = {
        "enabled": True,
        "config": "//:lint.xml",
    },
    manifest = "src/main/AndroidManifest.xml",
    res_values = {
        "strings": {
            "string/generated_value": "generated",
        },
    },
    resources = {
        "src/demo/res": {
        },
        "src/main/res": {
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//flavors/sample-library-demo",
        "@debug_maven//:androidx_core_core",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_core",
    ],
)

android_library(
    name = "sample-android-flavor-full-free-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/**/*.kt",
        "src/full/java/com/grab/grazel/android/flavor/HelloFlavorMessage.kt",
    ]),
    custom_package = "",
    enable_compose = True,
    enable_data_binding = True,
    lint_options = {
        "enabled": True,
        "config": "//:lint.xml",
    },
    manifest = "src/main/AndroidManifest.xml",
    res_values = {
        "strings": {
            "string/generated_value": "generated",
        },
    },
    resources = {
        "src/full/res": {
        },
        "src/free/res": {
        },
        "src/main/res": {
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//flavors/sample-library-full",
        "@debug_maven//:androidx_core_core",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_core",
    ],
)

android_library(
    name = "sample-android-flavor-full-paid-debug",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/**/*.kt",
        "src/full/java/com/grab/grazel/android/flavor/HelloFlavorMessage.kt",
    ]),
    custom_package = "",
    enable_compose = True,
    enable_data_binding = True,
    lint_options = {
        "enabled": True,
        "config": "//:lint.xml",
    },
    manifest = "src/main/AndroidManifest.xml",
    res_values = {
        "strings": {
            "string/generated_value": "generated",
        },
    },
    resources = {
        "src/full/res": {
        },
        "src/main/res": {
        },
    },
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "//:parcelize",
        "//flavors/sample-library-full",
        "@debug_maven//:androidx_core_core",
        "@maven//:androidx_appcompat_appcompat",
        "@maven//:androidx_compose_ui_ui",
        "@maven//:androidx_constraintlayout_constraintlayout",
        "@maven//:androidx_constraintlayout_constraintlayout_core",
    ],
)
