load("@grab_bazel_common//rules:defs.bzl", "kotlin_library", "kotlin_test")

kotlin_library(
    name = "sample-library-demo",
    srcs = glob([
        "src/main/java/com/grab/grazel/android/flavor/ModuleName.kt",
    ]),
    lint_options = {
        "enabled": False,
    },
    visibility = [
        "//visibility:public",
    ],
)

kotlin_test(
    name = "sample-library-demo-test",
    srcs = glob([
        "src/test/java/com/grab/grazel/flavor1/ModuleNameTest.kt",
    ]),
    associates = [
        "//flavors/sample-library-demo:sample-library-demo",
    ],
    visibility = [
        "//visibility:public",
    ],
    deps = [
        "@test_maven//:junit_junit",
    ],
)
